<?xml version="1.0" encoding="utf-8"?>
<resources>


	<string name="outerMusicLabel">播放</string>

	<string name="webview_choose">View</string>
    <string name="app_name">音乐盒</string>
    <string name="app_name_dev">音乐盒dev</string>
    <string name="about_app">音乐盒 %1$s</string>
	<string name="hello_desc">开始音乐的旅行</string>
    <string name="action_settings">刷新</string>
	<string name="getlist">扫描本地歌曲</string>
	<string name="musicIsScanning">正在扫描音乐</string>
	<string name="scanOver">扫描完成</string>
	<string name="scanOver_noMusic">没有扫描到音乐</string>
	<string name="aim">web</string>
	<string name="yes">确认</string>
	<string name="no">取消</string>
	<string name="exit">退出</string>
	<string name="close">关  闭</string>
	<string name="reload">错误,是否重新加载？</string>
	<string name="uncaughtException">未捕获的异常</string>
	<string name="cannotPlay">无法播放</string>
	<string name="fileNotFound">文件不存在</string>
	<string name="fileExist">文件已经存在</string>
	<string name="renameFailed">修改失败</string>
	<string name="invalidFilePath">无效路径</string>
	<string name="icon">头像</string>
	<string name="editText_day">day</string>
	<string name="timeout">设置时间小于当前时间</string>
	<string name="add">++</string>
	<string name="minus">--</string>
	<string name="setting">设置</string>
	<string name="setting_lockScreen">锁屏</string>
	<string name="setting_suffixFilter">音乐扫描</string>
	<string name="setting_lyricsSetting">歌词设置</string>
	<string name="lyrics_overlayWindow">歌词浮窗</string>
	<string name="lyrics_lyricsLock">歌词固定</string>
	<string name="lyrics_color">歌词颜色</string>
	<string name="lyrics_focusColor">歌词聚焦颜色</string>
	<string name="lyrics_size">歌词大小</string>
	<string name="lyrics_large">巨大</string>
	<string name="lyrics_min">极小</string>

	<string name="op_info">信息</string>
	<string name="op_share">分享</string>

    <string name="musicMain_noMusicAlert">没有音乐！是否加载？</string>

	<string name="delete">删除</string>
	<string name="deleteLocalFile">删除本地文件</string>
	<string name="music">音乐</string>
	<string name="musicControl">音乐控制</string>

	<string name="updata">web有更新</string>
	<string name="downloadYes">下载成功</string>
	<string name="downloadFailed">下载失败</string>
	<string name="updataYes">更新成功</string>

	<string name="musicplay_gedan">歌单</string>
	<string name="internet">网络</string>
	<string name="search">搜索</string>

	<string name="downloadManager">下载管理</string>
	<string name="downloading">正在下载</string>
	<string name="downloadComplete">下载完成</string>
	<string name="alreadyInTask">已经在下载列表了</string>
	<string name="selectPath">····</string>
	<string name="downloadSure">下载</string>
	<string name="clearAllRecord">是否清空所有下载历史，该操作不会删除源文件！</string>
	<string name="baiduOnce">百度一下</string>

	<!-- activity_setting_setting.xml -->
	<string name="settings_titleBar">音乐播放器设置</string>
	<string name="setting_clearAllMusic">清空音乐列表</string>
	<string name="setting_clearAllMusicAlert">是否清空列表所有音乐，该操作不会删除源文件！</string>
	<string name="setting_checkUpdate">检查更新(V %1$s)</string>
	<string name="setting_lastVersion">已经是最新版本</string>
	<string name="setting_about">关于</string>
	<string name="setting_update">更新</string>
	<string name="setting_updateTitle">%1$s  正在更新</string>
	<string name="setting_about_version">版本 %1$s</string>
	<string name="setting_suffix_select">音乐类型</string>
	<string name="setting_containSystemMusic">包含系统音乐</string>
	<string name="setting_suffix_save">保存</string>
	<string name="setting_suffix_saveSuccess">保存成功</string>
	<string name="settings_ignoreFileSize">忽略小文件</string>
	<string name="settings_suffixMinSize">最小值[MB]</string>
	<string name="setting_cache_title">缓存设置</string>
	<string name="setting_cacheOpen">缓存已开启</string>
	<string name="setting_cacheClosed">缓存已关闭</string>
	<string name="setting_clearCache">清空缓存</string>
	<string name="setting_cacheSelectPath">缓存路径</string>
	<string name="setting_downloadSelectPath">下载路径</string>
	<string name="setting_clearCacheTip">是否清空缓存，该操作会删除所有缓存音乐！</string>
	<string name="setting_cacheHasCleared">共清空%1$s条记录</string>

	<string name="setting_ignore_path">填入要忽略的文件夹</string>

	<string name="select">选择</string>
	<string name="chooser_fileSelect">文件选择</string>
	<string name="chooser_dirSelect">文件夹选择</string>
	<string name="chooser_backToParent">返回上一级</string>

	<string name="setting_suffix_add">添加</string>

	<!-- computer.xml -->
	<string name="computer_titleBar">接入电脑</string>
	<string name="computer_ip">ip地址：255.255.255.0</string>
	<string name="computer_port">端口:3456</string>
	<string name="computer_conButton">连接</string>
	<string name="computer_toolBox_copy">复制</string>
	<string name="computer_toolBox_paste">粘贴</string>
	<string name="computer_toolBox_cut">剪切</string>
	<string name="computer_toolBox_del">删除</string>
	<string name="computer_toolBox_rename">重命名</string>
	<string name="computer_toolBox_more">更多</string>


	<string name="musiclog_count">账号</string>
	<string name="musiclog_password">密码</string>
	<string name="musiclog_log">登录</string>


	<string name="musicPlay">播放</string>
	<string name="deleteOriginFile">删除源文件</string>
	<string name="deleteOrigin">删除源</string>
	<string name="detailInfo">详细信息</string>
	<string name="multiSelect">多选</string>
	<string name="setAsLike">添加到分组</string>
	<string name="autoPlayDisable">禁止自动播放</string>
	<string name="autoPlayDisableCancel">取消禁止</string>
	<string name="setAsLike_real">设为喜爱</string>
	<string name="cancelLike">取消喜爱</string>
	<string name="addToGroup">分组</string>
	<string name="remove">移除</string>
	<string name="selectAll">全选</string>

	<string name="musicName">曲名</string>
	<string name="path">路径</string>
	<string name="duration">时长</string>
	<string name="size">大小</string>

	<string name="deleteGroupOrigin">完全删除</string>
	<string name="clearGroup">清空</string>
	<string name="addMusic">添加音乐</string>


	<string name="page_local">本地音乐</string>
	<string name="page_Internet">网络音乐</string>
	<string name="page_lyrics">歌词</string>
	<string name="playList">播放列表</string>
	<string name="songSheet">歌单</string>
	<string name="video">视频</string>
	<string name="lyrics_noLyrics">没有歌词—(〃´-ω･) </string>
	<string name="dataAnalyzeError">数据解析错误</string>
	<string name="noInternet">网络错误</string>
	<string name="urlAnalyzeError">地址解析错误</string>
	<string name="download_urlError">获取路径失败</string>
	<string name="noMoreData">没有更多数据</string>
	<string name="unkownError">未知错误</string>
	<string name="soundsSetting">音效调节</string>
	<string name="musicFrequency">频率</string>
	<string name="savedSoundSetting">保存的音效</string>
	<string name="default_">默认</string>
	<string name="sheet_like">喜爱</string>
	<string name="soundEffect">音效</string>
	<string name="only4Enable">最多创建3个音效</string>

    <string name="failedConnectToPlayer">连接播放器失败</string>
	<string name="text_week">星期</string>
	<string name="text_0">天</string>
	<string name="text_1">一</string>
	<string name="text_2">二</string>
	<string name="text_3">三</string>
	<string name="text_4">四</string>
	<string name="text_5">五</string>
	<string name="text_6">六</string>
    <string name="setting_lockScreen_title">锁屏设置</string>
    <string name="setting_lockScreen_switch">开启锁屏</string>
	<string name="setting_lockScreen_modeSelect">锁屏模式</string>
	<string name="setting_lockScreen_mode_color">颜色</string>
	<string name="setting_lockScreen_mode_image">图片</string>
    <string name="setting_lockScreen_colorListLabel">锁屏背景:</string>
	<string name="setting_lockScreen_imageBackground">选择图片背景</string>


	<string name="billboard">榜单</string>
    <string name="musicTime">00:00</string>

	<string name="commentNum">%1$s条评论</string>
	<string name="noData">没有数据</string>

	<string name="weatherDeleteAllRecord">是否删除所有记录</string>



	<string name="account">账号</string>
	<string name="account_hint">账号(4–11位)</string>
	<string name="nickName">昵称</string>
	<string name="password">  密码</string>
	<string name="passwordConfirm">确认密码</string>
	<string name="register">注册</string>
	<string name="register_ok">注册成功</string>
	<string name="login">登录</string>
	<string name="login_ok">登录成功</string>
	<string name="logout">退出登录</string>

</resources>
