<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/musicPlay"
        android:id="@+id/musicPlay"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/deleteOrigin"
        android:title="@string/deleteOrigin"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/setAsLiske"
        android:title="@string/setAsLike"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/detailInfo"
        android:title="@string/detailInfo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/multiSelect"
        android:title="@string/multiSelect"
        app:showAsAction="always"
        />
</menu>