<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/subSettingBox"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <FrameLayout
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/left_bg"
        >
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:tint="@color/white"
            android:text="@string/app_name"
            android:drawableTint="@color/white"
            android:gravity="center"
            android:textColor="@color/white"
            android:drawableTop="@drawable/ic_launcher"/>

    </FrameLayout>
    <Button
        android:id="@+id/item_setting1"
        android:text="@string/setting"
        style="@style/leftDrawerItem"
        />
    <Button
        android:id="@+id/goDownload"
        android:text="@string/downloadSure"
        style="@style/leftDrawerItem"
        />
    <Button
        android:id="@+id/scanLocalMusic"
        android:text="@string/getlist"
        style="@style/leftDrawerItem"
        />
</LinearLayout>