<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
        android:id="@+id/ringsList"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            android:id="@+id/date_show"
      	  	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:padding="10dp"
            />
        
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button 
            android:id="@+id/minus"
            android:layout_weight="1.0"
      	  	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:text="@string/minus"
            />
        <TextView 
            android:id="@+id/Day"
      	  	android:layout_weight="1.0"
      	  	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:hint="@string/editText_day"
        	/>
        <TextView  
            android:id="@+id/Hours"
      	  	android:layout_weight="1.0"
      	  	android:layout_width="0dp"
      	  	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:hint="@string/editText_day"
            />
        <TextView 
            android:id="@+id/Minutes"
      	  	android:layout_weight="1.0"
      	  	android:layout_width="0dp"
      	  	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:hint="@string/editText_day"
            />
        <Button 
            android:id="@+id/add"
      	  	android:layout_weight="1.0"
      	  	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:text="@string/add"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        
        <Button 
       		android:id="@+id/timeSure"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/yes"
        />
        <Button 
       		android:id="@+id/timeCancel"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/no"
        />
        <Button 
       		android:id="@+id/exit"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/exit"
        />
    </LinearLayout>
    

</LinearLayout>
