<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="@color/white"
    android:focusableInTouchMode="true"
     >
    <RelativeLayout 
        android:id="@+id/computer_titleBar"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:fitsSystemWindows="true"
    	android:clipToPadding="true"
    	android:background="@color/lightBlue"
        >
        <TextView 
           	android:id="@+id/computer_titleBar_text"
        	android:layout_width="match_parent"
    		android:layout_height="wrap_content" 
    		android:text="@string/computer_titleBar"
    		android:gravity="center"
    		android:padding="@dimen/padding_15"
            />
        <LinearLayout 
            android:id="@+id/computer_inputBox"
            android:layout_width="fill_parent"
    		android:layout_height="0dp"
    		android:orientation="horizontal"
    		android:layout_below="@id/computer_titleBar_text"
    		android:paddingLeft="@dimen/padding_10"
    		android:paddingRight="@dimen/padding_10"
            >
            <AutoCompleteTextView 
	            android:id="@+id/computer_ip"
	        	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_weight="5" 
	    		android:inputType="textUri"
	    		android:completionThreshold="1"
	    		android:completionHint="@string/action_settings"
	    		android:singleLine="true"
	    		android:background="@color/white"
	    		android:layout_marginRight="10dp"
	    		android:hint="@string/computer_ip"
	    		android:padding="@dimen/padding_10"
	            />
            
            <EditText 
	            android:id="@+id/computer_port"
	        	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content" 
	    		android:layout_weight="1"
	    		android:inputType="number"
	    		android:maxLength="6"
	    		android:hint="@string/computer_port"
	    		android:singleLine="true"
	    		android:background="@color/white"
	    		android:padding="@dimen/padding_10"
	            />
	        
        </LinearLayout>
	    <Button 
	        android:id="@+id/computer_conButton"
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@id/computer_inputBox"
	        android:background="@drawable/but_2"
	        android:text="@string/computer_conButton"
	        />
        
    </RelativeLayout>
    
    
    <LinearLayout 
        android:id="@+id/computer_toolBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:baselineAligned="false"
        android:background="@color/lightBlue"
        android:layout_alignParentBottom="true"
        >
        <RelativeLayout 
	        android:id="@+id/computer_toolBox_cpoy"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.0"
	        android:clickable="true"
	        android:background="@drawable/but_3"
	        >
	        <ImageView 
	            android:id="@+id/computer_copyIcon"
	            android:layout_width="@dimen/padding_25"
	            android:layout_height="wrap_content"
	           android:layout_centerHorizontal="true"
	           android:clickable="false"
	            android:src="@drawable/toolbar_copy"/>
	       <TextView 
	           android:id="@+id/computer_copyOrPaste"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_below="@id/computer_copyIcon"
	           android:text="@string/computer_toolBox_copy"
	           android:gravity="center"
	           android:paddingBottom="@dimen/padding_5"
	           />
	    </RelativeLayout>
	    <RelativeLayout 
	        android:id="@+id/computer_toolBox_cut"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.0"
	        android:clickable="true"
	        android:background="@drawable/but_3"
	        >
	        <ImageView 
	            android:id="@+id/computer_cutIcon"
	            android:layout_width="@dimen/padding_25"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	           android:clickable="false"
	            android:src="@drawable/toolbar_cut"/>
	       <TextView 
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_below="@id/computer_cutIcon"
	           android:text="@string/computer_toolBox_cut"
	           android:gravity="center"
	           android:paddingBottom="@dimen/padding_5"
	           />
	    </RelativeLayout>
	    <RelativeLayout 
	        android:id="@+id/computer_toolBox_del"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.0"
	        android:clickable="true"
	        android:background="@drawable/but_3"
	        >
	        <ImageView 
	            android:id="@+id/computer_delIcon"
	            android:layout_width="@dimen/padding_25"
	            android:layout_height="wrap_content"
	           android:layout_centerHorizontal="true"
	           android:clickable="false"
	            android:src="@drawable/toolbar_delete"/>
	       <TextView 
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_below="@id/computer_delIcon"
	           android:text="@string/computer_toolBox_del"
	           android:gravity="center"
	           android:paddingBottom="@dimen/padding_5"
	           />
	    </RelativeLayout>
	    <RelativeLayout 
	        android:id="@+id/computer_toolBox_rename"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.0"
	        android:clickable="true"
	        android:background="@drawable/but_3"
	        >
	        <ImageView 
	            android:id="@+id/computer_renameIcon"
	            android:layout_width="@dimen/padding_25"
	            android:layout_height="wrap_content"
	           android:layout_centerHorizontal="true"
	           android:clickable="false"
	            android:src="@drawable/toolbar_edit"/>
	       <TextView 
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_below="@id/computer_renameIcon"
	           android:text="@string/computer_toolBox_rename"
	           android:gravity="center"
	           android:paddingBottom="@dimen/padding_5"
	           />
	    </RelativeLayout>
	    <RelativeLayout 
	        android:id="@+id/computer_toolBox_more"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.0"
	        android:clickable="true"
	        android:background="@drawable/but_3"
	        >
	        <ImageView 
	            android:id="@+id/computer_moreIcon"
	            android:layout_width="@dimen/padding_25"
	            android:layout_height="wrap_content"
	           android:layout_centerHorizontal="true"
	           android:clickable="false"
	            android:src="@drawable/toolbar_more"/>
	       <TextView 
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_below="@id/computer_moreIcon"
	           android:text="@string/computer_toolBox_more"
	           android:gravity="center"
	           android:paddingBottom="@dimen/padding_5"
	           />
	    </RelativeLayout>
    </LinearLayout>
    
    <ListView 
        android:id="@+id/computer_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/computer_titleBar"
        android:layout_above="@id/computer_toolBox"
        android:listSelector="@drawable/listselector"
        android:drawSelectorOnTop="true"
        ></ListView>
    
    
    
    
    
    
	    
</RelativeLayout>
