<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.web.misc.TopBarLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/themeColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:topBar_startImage="@drawable/icon_back_black"
        app:topBar_tint="@color/white"
        app:topBar_mainTitleText="@string/soundsSetting"
        app:topBar_endText="@string/setting_suffix_save"
        app:topBar_mainTitleColor="@color/white"
        />
    <TextView
        android:id="@+id/tv_tagName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_big"
        android:text="@string/musicFrequency"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_soundsSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tagName"
        android:paddingStart="0dp"
        android:paddingEnd="20dp"/>


    <View
        android:id="@+id/view_line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/themeColor"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/rv_soundsSetting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_savedSoundSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/savedSoundSetting"
        android:textSize="@dimen/textSize_big"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line_1"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_savedSoundSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layerType="software"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_savedSoundSetting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_line"/>
    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/themeColor"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/rv_savedSoundSetting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_addAndSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/themeColor"
        android:text="@string/setting_suffix_add"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_big"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/view_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        />
</androidx.constraintlayout.widget.ConstraintLayout>